# OTUS_SFINAE

./: CMakeLists.txt  Doxyfile  README.md  doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  main.cpp  navtreedata.js  navtreeindex0.js  pages.html
.github/workflows/: documentation.yml  release.yml
d0/d30/: md_README.html
da/d9e/: CMakeLists_8txt.html
da/ddd/: README_8md.html
df/d0a/: main_8cpp.html  main_8cpp.js  main_8cpp_source.html
search/: all_0.js  all_1.js  all_2.js  all_5.js  files_0.js  functions_0.js  functions_2.js  searchdata.js
